# RDAnalysis

./: CMakeLists.txt  LinkDef.h  README.md
example/: Kinfit.py  jetcluster.py
include/: BaseConstraint.h  BaseFitObject.h  ISRPhotonFitObject.h  JetFitObject.h  Kinfit.h  LeptonFitObject.h  ReconstructedParticle.h  dummyLoader.h
src/: BaseConstraint.cc  ExternalRecombiner.cc  JetFitObject.cc  Kinfit.cc  LeptonFitObject.cc  MCParticle.cc  ReconstructedParticle.cc  ValenciaPlugin.cc  dummyLoader.cc
